--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
 <body>
     
 
- <!-- menú de navegación -->
- <header>
+  <!-- menú de navegación -->
+  <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Proyecto vehiculos</a>
+            <a class="navbar-brand" href="#">Proyecto Vehiculos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,42 +28,56 @@
                         <a class="nav-link" href="" target="_self">Vehiculos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" target="_self">Text Drive</a>
+                        <a class="nav-link" href="" target="_self">Test Drive</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="" target="_self">Sobre Nosotros</a>
                     </li>
                 </ul>
-  
-
-                 <!-- carrusel -->
-    <div id="carrusel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/3.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item"></div>
-                <img src="img/4.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item"></div>
-                <img src="img/5.jpg" class="d-block w-100" alt="...">
+                <!-- Buscador dentro del menú -->
+                <form class="d-flex ms-auto" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carrusel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+    </nav>
+</header>
+
+<!-- carrusel -->
+<div id="carrusel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="img/2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="img/3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item"></div>
+            <img src="img/4.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item"></div>
+            <img src="img/5.jpg" class="d-block w-100" alt="...">
+        </div>
     </div>
+    
+    <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carrusel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+
+
+
+
 
 
 
