--- a/home.html
+++ b/home.html
@@ -25,13 +25,13 @@
                         <a class="nav-link active" aria-current="page" href="">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" target="_self">Vehiculos</a>
+                        <a class="nav-link" href="vehiculos.html" target="_self">Vehiculos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" target="_self">Test Drive</a>
+                        <a class="nav-link" href="textdrive.html" target="_self">Test Drive</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" target="_self">Sobre Nosotros</a>
+                        <a class="nav-link" href="sobrenosotros.html" target="_self">Sobre Nosotros</a>
                     </li>
                 </ul>
                 <!-- Buscador dentro del menú -->
