--- a/textdrive.html
+++ b/textdrive.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="">Inicio</a>
+                        <a class="nav-link active" href="home.html" href="">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="vehiculos.html" target="_self">Vehiculos</a>
