--- a/vehiculos.html
+++ b/vehiculos.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="">Inicio</a>
+                        <a class="nav-link active" href="home.html" href="">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="vehiculos.html" target="_self">Vehiculos</a>
@@ -46,7 +46,8 @@
 
 
 
-
+<link rel="stylesheet" href="css/.css">
+<script type="text/javascript" src="js/parcial.js"></script>
 
 </body>
 </html>
