--- a/vehiculos.html
+++ b/vehiculos.html
@@ -44,6 +44,84 @@
 </header>
 
 
+<div class="container mt-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <!-- Tarjeta 1 -->
+        <div class="col">
+            <div class="card">
+                <img src= "img/ferre.png" class="card-img-top" alt="Producto 1">
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- Tarjeta 2 -->
+        <div class="col">
+            <div class="card">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 2">
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- Tarjeta 3 -->
+        <div class="col">
+            <div class="card">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 3">
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- Tarjeta 4 -->
+        <div class="col">
+            <div class="card">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 4">
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- Tarjeta 5 -->
+        <div class="col">
+            <div class="card">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 5">
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- Tarjeta 6 -->
+        <div class="col">
+            <div class="card">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 6">
+                <div class="card-body">
+                    <h5 class="card-title">Producto</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
 
 
 <link rel="stylesheet" href="css/.css">
