--- a/vehiculos.html
+++ b/vehiculos.html
@@ -49,66 +49,66 @@
         <!-- Tarjeta 1 -->
         <div class="col">
             <div class="card">
-                <img src= "img/ferre.png" class="card-img-top" alt="Producto 1">
+                <img src= "img/1.jpg" class="card-img-top" alt="Producto 1">
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                    <a href="" class="btn btn-primary">Caracteristicas</a>
                 </div>
             </div>
         </div>
         <!-- Tarjeta 2 -->
         <div class="col">
             <div class="card">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 2">
+                <img src="img/2.jpg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                    <a href="" class="btn btn-primary">Caracteristicas</a>
                 </div>
             </div>
         </div>
         <!-- Tarjeta 3 -->
         <div class="col">
             <div class="card">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 3">
+                <img src="img/3.jpg" class="card-img-top" alt="Producto 3">
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                    <a href="" class="btn btn-primary">Caracteristicas</a>
                 </div>
             </div>
         </div>
         <!-- Tarjeta 4 -->
         <div class="col">
             <div class="card">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 4">
+                <img src="img/4.jpg" class="card-img-top" alt="Producto 4">
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                    <a href="" class="btn btn-primary">Caracteristicas</a>
                 </div>
             </div>
         </div>
         <!-- Tarjeta 5 -->
         <div class="col">
             <div class="card">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 5">
+                <img src="img/5.jpg" class="card-img-top" alt="Producto 5">
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                    <a href="" class="btn btn-primary">Caracteristicas</a>
                 </div>
             </div>
         </div>
         <!-- Tarjeta 6 -->
         <div class="col">
             <div class="card">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 6">
+                <img src="img/1.jpg" class="card-img-top" alt="Producto 6">
                 <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="login.html" class="btn btn-primary">Comprar</a>
+                    <a href="" class="btn btn-primary">Caracteristicas</a>
                 </div>
             </div>
         </div>
