--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -46,16 +46,125 @@
 
 
 
+<div class="accordion" id="accordionExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Sobre la Empresa
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Misión
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Visión
+        </button>
+      </h2>
+      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
 
 
+<!-- NUESTRTO ESQUIPO -->
 
+<!-- NUESTRTO EQUIPO -->
+<section id="nuestro-equipo" class="mt-5">
+<h2 class="text-center">Nuestro Equipo</h2>
 
+<!-- Miembro del equipo 1 (Imagen izquierda) -->
+<div class="row">
+  <div class="col-md-6 d-flex align-items-center">
+      <img src="img/person1.jpeg" class="img-fluid" alt="Team Member" style="width: 100px; height: auto;">
+      <div class="ml-3">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis.</p>
+          <div class="social-icons">
+              <a href="https://www.facebook.com/" target="_blank">
+                  <img src="img/images.png" alt="Facebook" style="width: 30px; height: 30px;">
+              </a>
+              <a href="https://www.twitter.com/" target="_blank">
+                  <img src="img/images2.png" alt="Twitter" style="width: 30px; height: 30px;">
+              </a>
+              <a href="https://www.linkedin.com/" target="_blank">
+                  <img src="img/images3.png" alt="LinkedIn" style="width: 30px; height: 30px;">
+              </a>
+          </div>
+      </div>
+  </div>
+</div>
 
-<link rel="stylesheet" href="css/.css">
-<script type="text/javascript" src="js/parcial.js"></script>
+<!-- Miembro del equipo 2 (Imagen derecha) -->
+<div class="row mt-4">
+  <div class="col-md d-flex align-items-center flex-row-reverse">
+      <img src="img/person2.jpeg" class="img-fluid" alt="Team Member" style="width: 100px; height: auto;">
+      <div class="mr-3">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis.</p>
+          <div class="social-icons">
+              <a href="https://www.facebook.com/" target="_blank">
+                  <img src="img/images.png" alt="Facebook" style="width: 30px; height: 30px;">
+              </a>
+              <a href="https://www.twitter.com/" target="_blank">
+                  <img src="img/images2.png" alt="Twitter" style="width: 30px; height: 30px;">
+              </a>
+              <a href="https://www.linkedin.com/" target="_blank">
+                  <img src="img/images3.png" alt="LinkedIn" style="width: 30px; height: 30px;">
+              </a>
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- Miembro del equipo 3 (Imagen izquierda) -->
+<div class="row mt-4">
+  <div class="col-md-6 d-flex align-items-center">
+      <img src="img/person3.jpeg" class="img-fluid" alt="Team Member" style="width: 100px; height: auto;">
+      <div class="ml-3">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis.</p>
+          <div class="social-icons">
+              <a href="https://www.facebook.com/" target="_blank">
+                  <img src="img/images.png" alt="Facebook" style="width: 30px; height: 30px;">
+              </a>
+              <a href="https://www.twitter.com/" target="_blank">
+                  <img src="img/images2.png" alt="Twitter" style="width: 30px; height: 30px;">
+              </a>
+              <a href="https://www.linkedin.com/" target="_blank">
+                  <img src="img/images3.png" alt="LinkedIn" style="width: 30px; height: 30px;">
+              </a>
+          </div>
+      </div>
+  </div>
+</div>
+</section>
+
+ 
+<!-- linkeo de js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="js/parcial.js"></script>
+<link rel="stylesheet" href="css/parcial.css">
+
 
 </body>
 </html>
