--- a/home.html
+++ b/home.html
@@ -152,12 +152,15 @@
         </div>
         <div class="col-md-8">
             <div id="map" class="border" style="height: 300px;">
-                <!-- Aquí puedes integrar un mapa interactivo, como Google Maps -->
-            </div>
-        </div>
+              
+         </div>
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
+<script src="script.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
 
     <link rel="stylesheet" href="css/.css">
     <script type="text/javascript" src="js/parcial.js"></script>
