modal add vehicule

--- a/vehiculos.html
+++ b/vehiculos.html
@@ -44,84 +44,209 @@
 </header>
 
 
-<div class="container mt-5">
+
+<div class="container mt-5"></div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-        <!-- Tarjeta 1 -->
+        <!-- Each card has a unique modal linked to it -->
+        <!-- Card 1 -->
         <div class="col">
             <div class="card">
-                <img src= "img/1.jpg" class="card-img-top" alt="Producto 1">
+                <img src="img/1.jpg" class="card-img-top" alt="Producto 1">
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Producto 1</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="" class="btn btn-primary">Caracteristicas</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">
+                        Características
+                    </button>
+                    <!-- Modal 1 -->
+                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalLabel1">Detalles del Producto 1</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Modelo: XYZ</p>
+                                    <p>Cilindraje: 2000cc</p>
+                                    <p>Cuidados: Regular mantenimiento</p>
+                                    <p>Precio: $25,000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Tarjeta 2 -->
+        <!-- Card 2 -->
+        <!-- Repeat similar structure for cards 2 to 6 with unique modal IDs -->
+
         <div class="col">
             <div class="card">
                 <img src="img/2.jpg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Producto 2</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="" class="btn btn-primary">Caracteristicas</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">
+                        Características
+                    </button>
+                    <!-- Modal 2 -->
+                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalLabel1">Detalles del Producto 1</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Modelo: XYZ</p>
+                                    <p>Cilindraje: 2000cc</p>
+                                    <p>Cuidados: Regular mantenimiento</p>
+                                    <p>Precio: $25,000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Tarjeta 3 -->
+
+
+
+         <!-- Card 2 -->
+        <!-- Repeat similar structure for cards 2 to 6 with unique modal IDs -->
+
         <div class="col">
             <div class="card">
-                <img src="img/3.jpg" class="card-img-top" alt="Producto 3">
+                <img src="img/3.jpg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Producto 2</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="" class="btn btn-primary">Caracteristicas</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">
+                        Características
+                    </button>
+                    <!-- Modal 2 -->
+                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalLabel1">Detalles del Producto 1</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Modelo: XYZ</p>
+                                    <p>Cilindraje: 2000cc</p>
+                                    <p>Cuidados: Regular mantenimiento</p>
+                                    <p>Precio: $25,000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Tarjeta 4 -->
+
+
+         <!-- Card 2 -->
+        <!-- Repeat similar structure for cards 2 to 6 with unique modal IDs -->
+
         <div class="col">
             <div class="card">
-                <img src="img/4.jpg" class="card-img-top" alt="Producto 4">
+                <img src="img/4.jpg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Producto 2</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="" class="btn btn-primary">Caracteristicas</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">
+                        Características
+                    </button>
+                    <!-- Modal 2 -->
+                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalLabel1">Detalles del Producto 1</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Modelo: XYZ</p>
+                                    <p>Cilindraje: 2000cc</p>
+                                    <p>Cuidados: Regular mantenimiento</p>
+                                    <p>Precio: $25,000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Tarjeta 5 -->
+
+
+         <!-- Card 2 -->
+        <!-- Repeat similar structure for cards 2 to 6 with unique modal IDs -->
+
         <div class="col">
             <div class="card">
-                <img src="img/5.jpg" class="card-img-top" alt="Producto 5">
+                <img src="img/5.jpg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Producto 2</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="" class="btn btn-primary">Caracteristicas</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">
+                        Características
+                    </button>
+                    <!-- Modal 2 -->
+                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalLabel1">Detalles del Producto 1</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Modelo: XYZ</p>
+                                    <p>Cilindraje: 2000cc</p>
+                                    <p>Cuidados: Regular mantenimiento</p>
+                                    <p>Precio: $25,000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Tarjeta 6 -->
+
+
+         <!-- Card 2 -->
+        <!-- Repeat similar structure for cards 2 to 6 with unique modal IDs -->
+
         <div class="col">
             <div class="card">
-                <img src="img/1.jpg" class="card-img-top" alt="Producto 6">
+                <img src="img/1.jpg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
+                    <h5 class="card-title">Producto 2</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="" class="btn btn-primary">Caracteristicas</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">
+                        Características
+                    </button>
+                    <!-- Modal 2 -->
+                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalLabel1">Detalles del Producto 1</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Modelo: XYZ</p>
+                                    <p>Cilindraje: 2000cc</p>
+                                    <p>Cuidados: Regular mantenimiento</p>
+                                    <p>Precio: $25,000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
-
-
-
-
-
-
-
 
 
 <link rel="stylesheet" href="css/.css">
